--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:ci": "npm run build && npx http-server dist --port 1234",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "npx mocha src/test/unit/**.mjs",
-    "test:e2e": "npx mocha src/test/e2e/*.test.mjs --timeout 5000",
+    "test:e2e": "npx mocha src/test/e2e/*.test.mjs --timeout 5000 --inspect-brk",
     "build": "npx rimraf dist .parcel-cache && npx parcel build src/app/index.html",
     "postinstall": "browser-driver-manager install chromedriver"
   },
